# egg-language-server

./: .gitignore  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: main.yml  typos.yml
.github/workflows/: build.yml  ci.yml  test.yml
client/: package-lock.json  package.json
client/src/: extension.ts
client/src/test/: completion.test.ts  helper.ts
doc/: README.md
doc/Fast_and_Extensible_Equality_Saturation_zh_cn/: 00-abstract.tex  01-intro.tex  02-background.tex  03-rebuilding.tex  04-tricks.tex  05-impl.tex  06-case-studies.tex  09-related.tex  10-conclusion.tex  91-lambda-rules.tex  92-lambda-code.tex  acmart.cls  egg.tex  macros.tex  references.bib  results.tex
doc/Fast_and_Extensible_Equality_Saturation_zh_cn/_build/: speedup-data.tex
doc/Fast_and_Extensible_Equality_Saturation_zh_cn/fig/: eqsat.drawio  overview1.drawio  overview2.drawio  (+2 more)
scripts/: csvplot1.py  csvplot2.py  csvplot3.py  fuzz.py
server/: Cargo.toml
server/benches/: my_benchmark.rs
server/examples/: egg_explain.rs  egg_simple.rs  foo.rs  fuzz_helper.rs  lambda.rs  math.rs  merge.rs  prop.rs  repython.rs  simple.rs  temp.rs  thread.rs  tree_sitter_js.rs  tree_sitter_py.rs  tree_sitter_test.rs
server/src/: chumsky.rs  egg_optimize.rs  javascript.rs  jump_definition.rs  lib.rs  lisp.rs  main.rs  python.rs  rejavascript.rs  relisp.rs  repython.rs  server.ts
server/src/egg_support/: common.rs  lambda.rs  lisp.rs  math.rs  mod.rs  optimize.rs  prop.rs  simple.rs
server/tests/: simple.rs
syntaxes/: lisp.tmLanguage.json
