[package]
name = "egg-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "1.0.0-alpha.3"
env_logger = "^0.9.0"
ropey = "^1.5.0"
serde_json = "^1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"

# egg
egg = "0.9.3"

# 临时：egg 的依赖
# [dev-dependencies]
fxhash = "0.2.1"
ordered-float = {version = "3.0.0", optional = true}

# tree_sitter
tree-sitter = "0.20.9"
tree-sitter-javascript = "0.20.0"
tree-sitter-rust = "0.20.3"
tree-sitter-python = "0.20.2"
tree-sitter-c = "0.20.2"
tree-sitter-sexp = { git = "https://github.com/AbstractMachinesLab/tree-sitter-sexp" }
tree-sitter-scheme = { git = "https://github.com/6cdh/tree-sitter-scheme.git"}
tree-sitter-java = "0.20.0"

[features]
# default = ["float"]
float = ["ordered-float"]	# TODO 还没有完全实现
